credentials changed with ssl

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
 
 
-	<div class="_demo--banner">
+	<div class="_demo--banner" style="background-color:#437070">
 		<div class="_demo--container">
 			<div class="banner--service-icon-container">
 				<img class="banner--service-icon" src="images/logo.jpg" alt="Concept Insight Service Demo Icon">
